Ajout du controller pour envoyer une réponse
ajout des réponse à une question, relation ManyToOne entre mes entités

--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -16,6 +16,14 @@
     </div>
         <p class="question-text">{{ question.content }}</p>
         <div class="separator"></div>
+        <h3 class="pd-20">Votre réponse</h3>
+        <div class="comment-form">
+            {{ form_start(form)}}
+            {{ form_rest(form) }}
+            <button class="btn btn-primary">Soumettre</button>
+            
+            {{ form_end(form)}}
+        </div>
     </div>
 
  {% endblock %}
