Dynamisation de mes question
Ajout d'un clickable sur mes bloc question vers l'id question

--- a/public/css/question_show.css
+++ b/public/css/question_show.css
@@ -11,3 +11,13 @@
     line-height: var(--line-height-hight);
     white-space: pre-wrap;
 }
+
+.question-response-text {
+    line-height: var(--line-height-hight);
+    white-space: pre-wrap;
+}
+
+small {
+    color: var(--gray);
+    opacity: 0.7;
+}
