--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,7 +7,7 @@
 
   <ul>
     {% for question in questions %}
-      <a class="block block-shadow d-flex flex-row mb-20">
+      <a href="{{ path('show', { id: question.id }) }}" class="block block-shadow d-flex flex-row mb-20">
         <div class="d-flex flex-column mr-20 align-items-center">
           <i class="fas fa-arrow-up {{ question.rating > 0 ? 'rating-up' : '' }}"></i>
           <p class="text-small {{ question.rating > 0 ? 'rating-up' : question.rating < 0 ? 'rating-down' : ''}}"
@@ -21,8 +21,8 @@
           </div>
           <div class="d-flex flex-row justify-content-between">
             <div class="d-flex flex-row align-items-center">
-              <img class="avatar mr-10" src="{{ question.author.avatar }}"/>
-              <small>Demandé par <span class="clickable">{{ question.author.name }}</span></small>
+              <img class="avatar mr-10" src="https://randomuser.me/api/portraits/men/52.jpg"/>
+              <small>Demandé par <span class="clickable">Jean Louis</span></small>
             </div>
             <div class="d-flex flex-row align-items-center">
               <i class="far fa-comment mr-10"></i>
