--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,16 +7,16 @@
 
   <ul>
     {% for question in questions %}
-      <a href="{{ path('show', { id: question.id }) }}" class="block block-shadow d-flex flex-row mb-20">
-        {% include "partials/_rating.html.twig" with { rating: question.rating } %}
-        <div class="flex-fill d-flex flex-column">
+      <div class="block block-shadow d-flex flex-row mb-20">
+        {% include "partials/_rating.html.twig" with { rating: question.rating, from: 'question', id: question.id } %}
+        <a  href="{{ path('show', { id: question.id  }) }}" class="flex-fill d-flex flex-column">
           <div class="mb-20 question-content pb-20">
             <h3 class="mb-20">{{ question.title }}</h3>
             <p>{{ question.content }}</p>
           </div>
           <div class="d-flex flex-row justify-content-between">
             <div class="d-flex flex-row align-items-center">
-              <img class="avatar mr-10" src="https://randomuser.me/api/portraits/men/52.jpg"/>
+              <img class="avatar mr-10" src="https://randomuser.me/api/portraits/women/44.jpg"/>
               <small>Demandé par <span class="clickable">Jean Louis</span></small>
             </div>
             <div class="d-flex flex-row align-items-center">
@@ -24,10 +24,9 @@
               <p>{{ question.nbrOfResponse }}</p>
             </div>
           </div>
-        </div>
+        </a>
+      </div>
 
-      </a>
     {% endfor %}
   </ul>
-
 {% endblock %}
