--- a/templates/question/show.html.twig
+++ b/templates/question/show.html.twig
@@ -10,7 +10,7 @@
 {% block body %}
 <div class="block">
   <div class="d-flex flex-row-nowrap">
-    {% include "partials/_rating.html.twig" with { rating: question.rating } %}
+    {% include "partials/_rating.html.twig" with { rating: question.rating, from: 'question', id: question.id } %}
     <div class="d-flex flex-column">
       <div class="d-flex flex-row-nowrap align-items-center pb-30">
         <h3 class="mr-10">{{ question.title }}</h3>
@@ -21,12 +21,12 @@
       <div class="separator"></div>
       {% for comment in question.comments %}
       <div class="d-flex flex-row-nowrap mb-20">
-        {% include "partials/_rating.html.twig" with { rating: comment.rating} %}
+        {% include "partials/_rating.html.twig" with { rating: comment.rating, from: 'comment', id: comment.id } %}
         <div class="mb-20">
           <div class="d-flex flex-row-nowrap align-items-center pb-10">
             <img class="avatar mr-10" src="https://randomuser.me/api/portraits/men/51.jpg">
             <p class="clickable">Jean Louis</p>
-            <small class="ml-auto">12/12/21</small>
+            <small class="ml-auto">{{ comment.createdAt | date }}</small>
           </div>
           <p class="question-response-text">{{ comment.content }}</p>
         </div>
