Ajout des accès de connexion "IsGranted"

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -372,6 +372,10 @@ footer {
     border-radius: 50%;
 }
 
+.avatar-lg {
+    width: 40px;
+}
+
 .clickable {
     color: var(--primary);
     font-weight: var(--font-weight-semi-bold);
@@ -392,4 +396,12 @@ footer {
 
 .rating-down {
     color: var(--warning);
+}
+
+
+/* question-text */
+
+.question-text, .question-response-text {
+    line-height: var(--line-height-hight);
+    white-space: pre-wrap;
 }
