Optimisation du code + redirection après connexion

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,6 +158,10 @@ a {
     margin-right: 20px;
 }
 
+.mb-10 {
+    margin-bottom: 10px;
+}
+
 .mb-20 {
     margin-bottom: 20px;
 }
@@ -404,4 +408,11 @@ footer {
 .question-text, .question-response-text {
     line-height: var(--line-height-hight);
     white-space: pre-wrap;
+}
+
+/* user profile */
+
+.profile-picture {
+    width: 150px;
+    border-radius: var(--border-radius);
 }
