--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -4,7 +4,7 @@
     <img src="{{ asset('images/logo.svg')}}">
   </a>
   <div class="header-search p-10 flex-fill">
-    <i class="fa-solid fa-search"></i>
+    <i class="fas fa-search"></i>
     <input type="text">
   </div>
   {%- if is_granted('ROLE_USER') -%}
