Mise en place du resert password + gestion token

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -312,6 +312,10 @@ a {
     background-color: var(--success);
 }
 
+.flash-error {
+    background-color: var(--warning);
+}
+
 /* header */
 
 header {
