--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -2,6 +2,7 @@
   <div class="content flex-fill d-flex flex-row-nowrap align-items-center justify-content-between">
   <a class="header-logo" href="{{ path('home') }}">
     <i class="fas fa-house">Accueil</i>
+    {# <img src="{{ asset('build/images/logo.svg')}}"> #}
   </a>
   <div class="header-search p-10 flex-fill">
     <i class="fas fa-search"></i>
