--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,8 +1,8 @@
 /* theme */
 
 :root {
-    --primary: #12cbc4;
-    --primary-light: #e7f9f9;
+    --primary: #4a7f8e;
+    --primary-light: #d2e9fb;
     --accent: #0652dd;
     --warning: #ea2027;
     --success: #009432;
@@ -62,15 +62,18 @@ body {
 /* Thème sombre */
 
 body.dark-theme {
-    background-color: #04303b;
+    background-color: #2c546a;
+    background-image: linear-gradient(315deg, #001C2F 0%, rgba(1, 152, 117, 0) 100%);
 }
 
 body.dark-theme .app-content {
-    background-color: #0b4555;
+    // background-color: #0b4555;
+    background-color: #2A4E62;
+    background-image: linear-gradient(315deg, #001C2F 0%, rgba(1, 152, 117, 0) 100%);
 }
 
 body.dark-theme .btn-primary {
-    background-color: #26a5c8;
+    background-color: #2a769f;
     color: var(--color-primary);
     font-weight: 600;
 }
@@ -94,17 +97,18 @@ body.dark-theme .active {
 body.dark-theme .block {
     padding: 15px;
     border-radius: var(--border-radius);
-    background-color: #4a7f8e;
     box-shadow: var(--box-shadow);
     color: white;
+    background-color: #4a7f8e;
+    background-image: linear-gradient(315deg, #134362 0%, rgba(1, 152, 117, 0) 100%);
 }
 
 body.dark-theme .clickable {
-    color: #26a5c8;
+    color: #2A4E62;
 }
 
 body.dark-theme .rating-up {
-    color: #26a5c8;
+    color: #2A4E62;
 }
 
 body.dark-theme h1, h2, h3, h4, h5 {
@@ -116,7 +120,8 @@ body.dark-theme a {
 }
 
 body.dark-theme footer {
-    background-color: #04303b;
+    background-color: #2c546a;
+    background-image: linear-gradient(315deg, #001C2F 0%, rgba(1, 152, 117, 0) 100%);
 }
 
 
@@ -307,7 +312,8 @@ a {
 }
 
 .btn-primary {
-    background-color: var(--primary);
+    background-color: #4a7f8e;
+    background-image: linear-gradient(315deg, #134362 0%, rgba(1, 152, 117, 0) 100%);
     color: var(--color-primary);
     font-weight: 600;
 }
