Mise en place du responsive

--- a/assets/styles/_utils.scss
+++ b/assets/styles/_utils.scss
@@ -1,19 +1,41 @@
-/* flex */
+@use 'mixin' as *;
 
 .d-flex {
-    display: flex;
+  display: flex;
 }
 
 .flex-row-nowrap {
-    flex-flow: row nowrap;
+  flex-flow: row nowrap;
 }
 
 .flex-row-wrap {
-    flex-flow: row wrap;
+  flex-flow: row wrap;
 }
 
 .flex-column {
-    flex-direction: column;
+  flex-direction: column;
+  &-xs {
+    @include xs {
+      flex-direction: column;
+    }
+  }
+}
+
+.hide-xs {
+  @include xs {
+    display: none;
+  }
+}
+
+.show-xs {
+  display: none;
+  @include xs {
+    display: inherit;
+  }
+}
+
+.hidden {
+  display: none;
 }
 
 .align-items-center {
