--- a/assets/styles/layout/_sidebar.scss
+++ b/assets/styles/layout/_sidebar.scss
@@ -1,5 +1,11 @@
+@use '../mixin' as *;
+
 .sidebar {
-    min-width: 200px;
+  min-width: 200px;
+  margin-right: 50px;
+  @include xs {
+    margin-right: 0;
+  }
 }
 
 .sidebar-nav a {
