Mise en place de la barre de recherche avec vue

--- a/templates/partials/_footer.html.twig
+++ b/templates/partials/_footer.html.twig
@@ -1,6 +1,6 @@
 <footer class="d-flex flex-row-nowrap justify-content-center p-20">
 	<div class="content p-20">
-		<p>© Wonder, Inc. 2021-2022
+		<p>© Bloggy, Inc. 2021-2022
 		</p>
 	</div>
 </footer>
