--- a/assets/styles/components/_question.scss
+++ b/assets/styles/components/_question.scss
@@ -2,6 +2,19 @@
     border-bottom: 1px solid var(--gray-light);
 }
 
+.question-tag {
+    background-color: #579fb3;
+    color: var(--color-primary);
+    font-size: var(--font-size-small);
+    font-weight: var(--font-weight-semi-bold);
+    border-radius: var(--border-radius);
+    padding: 5px 10px;
+}
+
+small {
+    opacity: 0.7;
+}
+
 .rating-up {
     color: var(--primary);
 }
