--- a/assets/styles/dark_theme.scss
+++ b/assets/styles/dark_theme.scss
@@ -54,7 +54,15 @@ body.dark-theme h1, h2, h3, h4, h5 {
     color: #1c1c1e;
 }
 
+body.dark-theme a.active {
+    color: white;
+}
+
 body.dark-theme a {
+    color: white;
+}
+
+body.dark-theme p {
     color: white;
 }
 
