--- a/emails/templates/welcome.html.twig
+++ b/emails/templates/welcome.html.twig
@@ -12,7 +12,7 @@
   {% apply inline_css(source('@email_css/email.css')) %}
 
   <h1>Bienvenue {{ username }}</h1>
-  <p>Vous pouvez dès à présent poser vos questions sur Wonder.</p>
+  <p>Vous pouvez dès à présent poser vos questions sur Bloggy.</p>
   <a href="{{ url('login') }}">Me connecter</a>
   {% endapply %}
 
