--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -1,11 +1,15 @@
 <header class="d-flex flex-row-nowrap justify-content-center p-20">
   <div class="content flex-fill d-flex flex-row-nowrap align-items-center justify-content-between">
     <a class="header-logo" href="{{ path('home') }}">
-      <img src="{{ asset('build/images/logo.svg')}}">
+      <img src="{{ asset('build/images/logoooo.svg')}}">
     </a>
-    <div class="header-search p-10 flex-fill">
-      <i class="fas fa-search"></i>
-      <input type="text">
+    <div id="search" class="header-search p-10 flex-fill d-flex flex-row align-items-center">
+      <i class="fas fa-search mr-10"></i>
+      <input @input="updateInput" ref="input" type="text" class="flex-fill">
+      <img v-if="isLoading" src="{{ asset('build/images/loading.gif') }}" class="header-search-loading">
+      <ul class="header-search-result d-flex flex-column" v-if="questions?.length">
+          <a v-for="question in questions" :key="question.id" v-bind:href="'/question/' + question.id">${ question.title }$</a>
+      </ul>
     </div>
     {%- if is_granted('ROLE_USER') -%}
       <div class="d-flex flow-row-nowrap justify-content-center hide-xs">
