--- a/emails/css/email.css
+++ b/emails/css/email.css
@@ -8,7 +8,7 @@ a {
     text-decoration: none;
     padding: 10px 15px;
     margin-top: 20px;
-    background-color: #12cbc4;
+    background-color: #4a7f8e;
     display: inline-block;
     border-radius: 3px;
 }
